# ponytron

./: .env  .gitignore  Dockerfile  README.md  activity.json  app.py  devbox.json  message.json  models.py  package-lock.json  pyproject.toml
.devcontainer/: Dockerfile
front/: bun.lockb  package-lock.json  package.json  panda.config.mjs  svelte.config.js  tailwind.config.js
front/src/lib/: Chat.svelte  Login.svelte  Users.svelte  common.js  ponylog.js
front/src/routes/: +layout.js  +layout.server.js  +layout.svelte  +page.server.js  +page.svelte
front/src/routes/chat/[name]/: +page.js  +page.server.js  +page.svelte
front/src/routes/chats/: +page.js  +page.server.js  +page.svelte
front/src/routes/profile/[user]/: +page.server.js  +page.svelte
src/ponytron/: __init__.py
