[project]
name = "ponytron"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "V", email = "v@fbi.gov" }
]
dependencies = [
    "litestar[standard]>=2.6.1",
    "pony>=0.7.17",
    "passlib>=1.7.4",
    "python-socketio>=5.11.1",
    "fastapi_cors>=0.0.6",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.0.1",
    "atproto>=0.0.45",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "ponytron:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ponytron"]
